Modify to use current ver lib

--- a/firebase-auth_demo/package.json
+++ b/firebase-auth_demo/package.json
@@ -9,6 +9,7 @@
   "author": "Shintaro Ikeda",
   "license": "ISC",
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "firebase-admin": "^5.12.1"
